--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.6.13</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.devsuperopr</groupId>
-	<artifactId>DSMovie.Atual4</artifactId>
+	<groupId>com.devsuperior</groupId>
+	<artifactId>dsmovie</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>DSMovie.Atual4</name>
-	<description>Project for Spring Boot Java </description>
+	<name>dsmovie</name>
+	<description>Projeto criado na semana Spring React</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -53,18 +52,16 @@
 	</dependencies>
 
 	<build>
-		<plugin>
+		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
 			<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-resources-plugin</artifactId>
-			<version>3.1.0</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
 			</plugin>
-			
 		</plugins>
 	</build>
 
